# nlc-hub

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
examples/: base_config.yaml  bert.yaml  bert_mlp.yaml  qwen3_lstm_seq.yaml  qwen3_mlp_cls.yaml  qwen3_mlp_mean.yaml
src/nlc_hub/: cli.py  data.py  prompt.py
src/nlc_hub/train/: tunner.py
src/nlc_hub/train/trainer/: base_trainer.py  bert.py  bert_classify.py  classify.py  feature_extra.py  llm_classify.py
